--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
-title: Home
+title: Life Is A Beautiful Journey
 layout: default
-quote-of-the-day: Set your heart upon your work but never its reward.
-quote-by: Krishna
+quote-of-the-day: Happiness Is A Journey, Not A Destination
+quote-by: 
 ---
 
 <div class="row first-row">
