--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-title: Life Is A Beautiful Journey
+title: Passionate Traveller
 layout: default
 quote-of-the-day: Happiness Is A Journey, Not A Destination
 quote-by: 
