--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 ---
-title: Passionate Traveller
+title:
 layout: default
-quote-of-the-day: Happiness Is A Journey, Not A Destination
+quote-of-the-day: Happiness Is A Journey,Not A Destination
 quote-by: 
 ---
 
-<div class="row first-row">
+<!--<div class="row first-row">
 <a href="{{site.baseurl}}{{site.posts[0].url}}">
         <div class="eight columns news-piece news-piece-1 border" style="background-image: url({{site.baseurl}}/img/{{site.posts[0].img}})">
         <p class="news-title">{{site.posts[0].title}}</p>
@@ -70,7 +70,7 @@ quote-by:
     </div>
     </a>
     
-</div>
+</div>-->
 <div class="row quote">
    <div class="container">
     <div class="twelve columns">
@@ -80,7 +80,7 @@ quote-by:
 </div>
 </div>
 
-<div class="row row-border">
+<!--<div class="row row-border">
 
      <a href="{{site.baseurl}}{{site.posts[8].url}}">
         <div class="six columns news-piece news-piece-2 border" style="background-image:url({{site.baseurl}}/img/{{site.posts[8].img}})">
@@ -117,7 +117,7 @@ quote-by:
          
     </a>
 
-</div>
+</div>-->
 
 
 
