--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ quote-by:
    <div class="container">
     <div class="twelve columns">
         <p class="quote-day">{{page.quote-of-the-day}}</p>
-        <p class="quote-by">- {{page.quote-by}}</p>
+       <!-- <p class="quote-by">- {{page.quote-by}}</p>-->
     </div>
 </div>
 </div>
